Remove VersionChecker